# qwixtractor

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/qwixtractor/: __init__.py  qwixtractor.py
tests/: test_qwixtractor.py
