[tool.poetry]
name = "qwixtractor"
version = "0.1.0"
description = "Extract data from the Quarterly Workforce Indicators"
authors = ["Rodrigo Franco"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=1.4.3"
requests = ">=2.28.1"
progressbar2 = ">=4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
